CHANGES IN VERSION 1.4.20
-------------------------
BUG FIXES
    o Bug fix in icgcSimpleMutationToMAF while converting ICGC maf to MAF object in. Issue: #105
    o Bug fix in oncomatrix function which earlier failed drop missing factors as well as resulted in error with zero samples. Issue: #96

IMPROVEMENTS
    o Add keepGeneOrder argument to coOncoplot. PR: #107

CHANGES IN VERSION 1.4.15
-------------------------
BUG FIXES
    o Set fixed seed value for extractSignature so that runs are reproducible. Issue: #101

CHANGES IN VERSION 1.4.10
-------------------------
BUG FIXES
    o Bug fix in read.maf which caused error when MAF contained single sample. Issue: #91
    o Bug fix in Oncoplot which caused plotting error while parsing mutsig results. Issue: #93
    o Enhancement to oncoplot. Added arguments annotationFontSize and annotationTitleFontSize to control annotations. Issue: #94

CHANGES IN VERSION 1.4.05
-------------------------
BUG FIXES
    o Bug fix in trinucleotideMatrix which caused error due to parsing of chromosome names in fasta file. Issue: #75
    o Bug fix in plotApobecDiff which messed up the order of genes in bottom bar plot. Issue: #80

CHANGES IN VERSION 1.4.00
-------------------------
NEW FUNCTIONS
    o plotApobecDiff - plots differences between APOBEC enriched and non APOBEC enriched samples
    o gisticOncoplot, gisticBubblePlot and gisticChromPlot to visualize GISTIC results
    o somaticInteractions - to identify mutually exclusive/co-occuring gene sets
    o genotypeMatrix - function to create genotype matrix
    o mutCountMatrix - generate count matrix

SIGNIFICANT USER-LEVEL IMPROVEMENT
    o Changes to MAF object: It now includes clinical data slot similar to PhenoData of expressionset objects.
    o Changes to MAF object: Silent variants will be stored seperately in MAF object and won't be mixed with non-syn variants.