@@ -1,6 +1,13 @@
-dashboard = function(maf, color = NULL, rmOutlier = TRUE, titv.color = NULL, sfs = statFontSize, fontSize = fs, n = 10, donut = pie, rawcount = TRUE){
+dashboard = function(maf, color = NULL, rmOutlier = TRUE, titv.color = NULL, sfs = statFontSize, fontSize = fs, n = 10, donut = pie, rawcount = TRUE, stat = NULL){
 
-  #--------------------------- Color code for VC -----------------
+  #--------------------------- Color code VC and gg theme -----------------
+
+  db_theme = cowplot::theme_cowplot(font_size = fontSize, line_size = 0.75)+cowplot::background_grid(major = 'xy', minor = 'none')+
+    theme(axis.text.x = element_text(face = 'bold', angle = 90, hjust = 1), axis.title.x = element_blank(), axis.text.y = element_text(face = 'bold'), axis.title.y = element_blank())+
+    theme(legend.position = 'none')+
+    theme(plot.title = element_text(color="black", face="bold", size = 9, hjust=0))+
+    theme(plot.subtitle = element_text(color="#252525", face="bold", size = 8, hjust=0))
+
 
 
   if(is.null(color)){
@@ -31,17 +38,38 @@ dashboard = function(maf, color = NULL, rmOutlier = TRUE, titv.color = NULL, sfs
   #For now keep it at 90
   textAngle = 90
 
-  med.line = round(max(maf@summary[,Median], na.rm = TRUE), 2)
-  df = data.frame(y = c(med.line), x = as.integer(0.8*nrow(getSampleSummary(maf))), label = c(paste('Median: ', med.line, sep='')))
 
-  vcs.gg = ggplot(data = vcs.m, aes(x = Tumor_Sample_Barcode, y = N, fill = Variant_Classification))+geom_bar(stat = 'identity')+scale_fill_manual(values = col)+cowplot::theme_cowplot(font_size = fontSize)+
-    theme(axis.ticks = element_blank(), axis.text.x = element_blank(), legend.position = 'none')+
-    ylab('# of Variants')+xlab('Samples')+
-    cowplot::background_grid(major = 'xy', minor = 'none')+geom_hline(yintercept = med.line, linetype = 3)+
-    ggrepel::geom_label_repel(inherit.aes = FALSE, data = df, aes(x = x, y = y, label = label), fill = 'gray', fontface = 'bold', color = 'black', box.padding = unit(1, "lines"),
-                              point.padding = unit(1, "lines"), force = 20, size = sfs, nudge_y = 2)
+  if(!is.null(stat)){
+    if(stat == 'mean'){
+      med.line = round(maf@summary[nrow(maf@summary),Mean], 2)
+      df = data.frame(y = c(med.line), x = as.integer(0.8*nrow(getSampleSummary(maf))), label = c(paste('Mean: ', med.line, sep='')))
+    }else if(stat == 'median'){
+      med.line = round(maf@summary[nrow(maf@summary),Median], 2)
+      df = data.frame(y = c(med.line), x = as.integer(0.8*nrow(getSampleSummary(maf))), label = c(paste('Median: ', med.line, sep='')))
+    }
+  }else{
+    med.line = round(max(maf@summary[,Median], na.rm = TRUE), 2)
+  }
 
-  vcs.gg = vcs.gg+ggtitle(label = 'Variants per sample')
+  vcs.gg = ggplot(data = vcs.m, aes(x = Tumor_Sample_Barcode, y = N, fill = Variant_Classification))+geom_bar(stat = 'identity')+scale_fill_manual(values = col)+
+    ylab('# of Variants')+db_theme+theme(axis.ticks.x = element_blank(), axis.text.x = element_blank())
+
+
+  if(!is.null(stat)){
+    vcs.gg = vcs.gg+geom_hline(yintercept = med.line, linetype = 3, size = 1, color = 'maroon')
+    if(stat == 'mean'){
+      vcs.gg = vcs.gg + ggtitle(label = 'Variants per sample', subtitle = paste0("Mean: ", med.line))+
+        ggrepel::geom_label_repel(inherit.aes = FALSE, data = df, aes(x = x, y = y, label = label), fill = 'gray', fontface = 'bold', color = 'black', box.padding = unit(1, "lines"),
+                                  point.padding = unit(1, "lines"), force = 10, size = sfs, nudge_y = 1)
+    }else{
+      vcs.gg = vcs.gg + ggtitle(label = 'Variants per sample', subtitle = paste0("Median: ", med.line))+
+        ggrepel::geom_label_repel(inherit.aes = FALSE, data = df, aes(x = x, y = y, label = label), fill = 'gray', fontface = 'bold', color = 'black', box.padding = unit(1, "lines"),
+                                  point.padding = unit(1, "lines"), force = 10, size = sfs, nudge_y = 1)
+    }
+
+  }else{
+    vcs.gg = vcs.gg+ggtitle(label = 'Variants per sample', subtitle = paste0("Median: ", med.line))
+  }
 
   #--------------------------- vc summary plot -----------------
 
@@ -50,16 +78,17 @@ dashboard = function(maf, color = NULL, rmOutlier = TRUE, titv.color = NULL, sfs
     #Get box heights from boxplot.srtas
     boxH = vcs.m[,boxplot.stats(N)$stat[5], by = .(Variant_Classification)]
     colnames(boxH)[ncol(boxH)] = 'boxStat'
-    vcs.gg2 = ggplot(data = vcs.m, aes(x = Variant_Classification, y = N, fill = Variant_Classification))+geom_boxplot(outlier.shape = NA)+scale_fill_manual(values = col)+
-      cowplot::theme_cowplot(font_size = fontSize)+theme(axis.ticks = element_blank(), axis.text.x = element_blank(), legend.position = 'none')+
-      theme(legend.key.size = unit(0.5, "cm"), legend.title = element_blank(), legend.text = element_text(size = 8))+ylim(0, max(boxH$boxStat)+5)+cowplot::background_grid(major = 'xy', minor = 'none')
+    vcs.gg2 = ggplot(data = vcs.m, aes(x = Variant_Classification, y = N, fill = Variant_Classification))+
+      geom_boxplot(outlier.shape = NA)+scale_fill_manual(values = col)+
+      ylim(0, max(boxH$boxStat)+5)+db_theme
+
   } else{
-    vcs.gg2 = ggplot(data = vcs.m, aes(x = Variant_Classification, y = N, fill = Variant_Classification))+geom_boxplot()+scale_fill_manual(values = col)+cowplot::theme_cowplot(font_size = fontSize)+
-      theme(axis.ticks = element_blank(), axis.text.x = element_blank(), legend.position = 'none')+
-      theme(legend.key.size = unit(0.5, "cm"), legend.title = element_blank(), legend.text = element_text(size = 8))+cowplot::background_grid(major = 'xy', minor = 'none')
+    vcs.gg2 = ggplot(data = vcs.m, aes(x = Variant_Classification, y = N, fill = Variant_Classification))+
+      geom_boxplot()+scale_fill_manual(values = col)+db_theme
   }
 
-  vcs.gg2 = vcs.gg2+ggtitle('Variant Classification Summary')
+  vcs.gg2 = vcs.gg2+ggtitle(label = 'Variant Classification\nSummary')+
+    theme(axis.ticks.x = element_blank(), axis.text.x = element_blank())
 
 
   #--------------------------- titv summary plot -----------------
@@ -78,22 +107,10 @@ dashboard = function(maf, color = NULL, rmOutlier = TRUE, titv.color = NULL, sfs
     names(titv.color) = c('C>T', 'C>G', 'C>A', 'T>A', 'T>C', 'T>G')
   }
 
-  if(donut){
-    titv.sums$fraction = titv.sums$value/sum(titv.sums$value)
-    titv.sums$ymax = cumsum(titv.sums$fraction)
-    titv.sums$ymin = c(0, head(titv.sums$ymax, n=-1))
 
-    #Credit: http://stackoverflow.com/questions/13615562/ggplot-donut-chart
-    #Credit: http://stackoverflow.com/questions/35267115/ggplot2-how-to-add-percentage-labels-to-a-donut-chart
-    titv.gg = ggplot(titv.sums, aes(fill= class, ymax=ymax, ymin=ymin, xmax=4, xmin=3))+geom_rect(colour="grey30")+coord_polar(theta="y") +
-      xlim(c(0, 4))+
-      theme(panel.background = element_blank(), axis.text.x = element_blank(), axis.text.y = element_blank(), axis.ticks = element_blank(), legend.position = 'bottom', legend.title = element_blank(), legend.key.size = unit(0.35, "cm"), legend.box.background = element_blank())+
-      geom_label(aes(label=round(dat$fraction, digits = 2),x=3.5,y=(ymin+ymax)/2),inherit.aes = TRUE, show.legend = FALSE, size = 2)
-  }else{
-    titv.gg = ggplot(data = titv.sums, aes(x = class, y = value, fill = class))+geom_bar(stat = 'identity')+scale_fill_manual(values = titv.color)+
-      cowplot::theme_cowplot(font_size = fontSize)+cowplot::background_grid(major = 'xy')+coord_flip()+
-      theme(legend.position = 'none')+xlab('')+ylab('N')+ggtitle('SNV Class')
-  }
+  titv.gg = ggplot(data = titv.sums, aes(x = class, y = value, fill = class))+
+            geom_bar(stat = 'identity')+scale_fill_manual(values = titv.color)+
+            coord_flip()+ggtitle(label = 'SNV Class')+db_theme
 
   if(!rawcount){
     titv.gg = titv.gg+scale_y_continuous(breaks = seq(0, 1, 0.2), labels = seq(0, 1, 0.2), limits = c(0, 1))
@@ -106,52 +123,19 @@ dashboard = function(maf, color = NULL, rmOutlier = TRUE, titv.color = NULL, sfs
   vt.plot.dat = vt.plot.dat[,colnames(vt.plot.dat)[!colnames(x = vt.plot.dat) %in% c('total', 'CNV')], with = FALSE]
   vt.plot.dat = suppressWarnings( data.table::melt(vt.plot.dat[,c(2:(ncol(vt.plot.dat))), with = FALSE], id = NULL))
 
-  if(donut){
-    vt.plot.dat = vt.plot.dat[,sum(value),variable]
-    colnames(vt.plot.dat)[2] = 'value'
-    vt.plot.dat$fraction = vt.plot.dat$value/sum(titv.sums$value)
-    vt.plot.dat$ymax = cumsum(vt.plot.dat$fraction)
-    vt.plot.dat$ymin = c(0, head(vt.plot.dat$ymax, n=-1))
-
-    vt.gg = ggplot(vt.plot.dat, aes(fill= variable, ymax=ymax, ymin=ymin, xmax=4, xmin=3))+geom_rect(colour="grey30")+coord_polar(theta="y") +
-      xlim(c(0, 4))+ggtitle('Variant Type')+
-      theme(panel.background = element_blank(), axis.text.x = element_blank(), axis.text.y = element_blank(), axis.ticks = element_blank(), legend.position = 'bottom', legend.title = element_blank(), legend.key.size = unit(0.35, "cm"), legend.box.background = element_blank())
-
-  }else{
-    vt.gg = ggplot(data = vt.plot.dat, aes(x = variable, y = value, fill = variable))+
-      geom_bar(stat = 'identity')+coord_flip()+cowplot::theme_cowplot(font_size = fontSize)+
-      cowplot::background_grid(major = 'xy')+
-      theme(legend.position = 'none')+xlab('')+ylab('N')+ggtitle('Variant Type')
-  }
-
+  vt.gg = ggplot(data = vt.plot.dat, aes(x = variable, y = value, fill = variable))+
+                geom_bar(stat = 'identity')+coord_flip()+
+                ggtitle('Variant Type')+db_theme
 
   #--------------------------- variant classification plot -----------------
-#   vc.plot.dat = vcs
-#   vc.plot.dat = vc.plot.dat[,c(2:(ncol(vc.plot.dat))), with =FALSE]
   vc.plot.dat = vcs[,2:ncol(vcs), with =FALSE]
   vc.lvl = sort(colSums(vc.plot.dat))
   vc.plot.dat = suppressWarnings( data.table::melt(vc.plot.dat))
   vc.plot.dat$variable = factor(x = vc.plot.dat$variable, levels = names(vc.lvl))
 
-  if(donut){
-    vc.plot.dat = vc.plot.dat[,sum(value),variable]
-    colnames(vc.plot.dat)[2] = 'value'
-    vc.plot.dat$fraction = vc.plot.dat$value/sum(titv.sums$value)
-    vc.plot.dat$ymax = cumsum(vc.plot.dat$fraction)
-    vc.plot.dat$ymin = c(0, head(vc.plot.dat$ymax, n=-1))
-
-    vc.gg = ggplot(vc.plot.dat, aes(fill= variable, ymax=ymax, ymin=ymin, xmax=4, xmin=3))+geom_rect(colour="grey30")+coord_polar(theta="y") +
-      xlim(c(0, 4))+ggtitle('Variant Classification')+scale_fill_manual(values = col)+
-      theme(panel.background = element_blank(), axis.text.x = element_blank(), axis.text.y = element_blank(), axis.ticks = element_blank(), legend.position = 'bottom', legend.title = element_blank(), legend.key.size = unit(0.35, "cm"), legend.box.background = element_blank())
-
-  }else{
-    vc.gg = ggplot(data = vc.plot.dat, aes(x = variable, y = value, fill = variable))+
+  vc.gg = ggplot(data = vc.plot.dat, aes(x = variable, y = value, fill = variable))+
       geom_bar(stat = 'identity')+scale_fill_manual(values = col)+coord_flip()+
-      cowplot::theme_cowplot(font_size = fontSize)+cowplot::background_grid(major = 'xy')+
-      theme(legend.position = 'none')+xlab('')+ylab('N')+ggtitle('Variant Classification')
-  }
-
-
+      ggtitle('Variant Classification')+db_theme
 
 #--------------------------- hugo-symbol plot -----------------
   gs = getGeneSummary(maf)
@@ -167,15 +151,16 @@ dashboard = function(maf, color = NULL, rmOutlier = TRUE, titv.color = NULL, sfs
   gs.dat = suppressWarnings(data.table::melt(gs.dat))
   gs.dat$Hugo_Symbol = factor(x = gs.dat$Hugo_Symbol, levels = rev(gs.lvl))
 
-  gs.gg = ggplot(data = gs.dat, aes(x = Hugo_Symbol, y = value, fill = variable))+geom_bar(stat = 'identity')+scale_fill_manual(values = col)+coord_flip()+
-    cowplot::theme_cowplot(font_size = fontSize)+cowplot::background_grid(major = 'xy')+
-    theme(legend.position = 'none')+xlab('')+ylab('N')
-  gs.gg = gs.gg+ggtitle('Frequently Mutated Genes')
+  gs.gg = ggplot(data = gs.dat, aes(x = Hugo_Symbol, y = value, fill = variable))+
+    geom_bar(stat = 'identity')+scale_fill_manual(values = col)+coord_flip()+
+    ggtitle(label = paste0('Top ',  length(gs.lvl), '\nmutated genes'))+db_theme
 
 
   #--------------------------- Organize plots -----------------
 
-  dash.gg = cowplot::plot_grid(vt.gg, vc.gg, titv.gg, vcs.gg, vcs.gg2, gs.gg)
+  dash.gg = cowplot::plot_grid(vc.gg, vt.gg, titv.gg, vcs.gg, vcs.gg2, gs.gg,
+                               nrow = 2, ncol = 3, rel_widths = c(1.2, 1, 1), rel_heights = c(1, 1.05)
+                               )
   return(dash.gg)
 
 }
